style javascript page

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,10 @@
-<h1> 
-	hey
-</h1>
+<head>
+</head>
 
-<h2>
-	This is the other page
-</h2>
+<body>
+	<form tag= 'LOGIN'>
+
+
+  <input type ='submit' value ='sumbit'	
+	</form>
+</body>
