--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,24 @@
 <head>
 </head>
 
-<body>
-	<form tag= 'LOGIN'>
+<body id= 'home_body'>
+	<h1 id= 'home_h1'>
+		Whats up you guys? 
+		<a id='reveal_li'> Continue... </a>
+	</h1>
 
+	<li id='home_li', style='display: none'>
+   This is my home page that I'm working on.
+	 <button id='home_button' > Continue...</a>
+ </li>
+    
+  <li id='home_li_2', style='display: none'>
+    Feel free to go to other pages.
+		<a id= 'reveal_li_3',> Continue... </a>
+	</li>
 
-  <input type ='submit' value ='sumbit'	
-	</form>
+	<li id='home_li_3', style='display: none'>
+	  Click the button!
+		<a id='random_page'> Random Page </a>
+	</li>
 </body>
