--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,11 @@
 		<title> Luke Pfeiffer </title>
      <link href="/stylesheets/javascript_page.css" rel="stylesheet" type="text/css">
 		 <link href="/stylesheets/universal.css" rel="stylesheet" type=text/css">
+	   <link href="/stylesheets/home.css" rel="stylesheet" type=text/css">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-			<script src="/javascripts/common.js"></script>
-			
+			<script src="/javascripts/javascript.js"></script>
+			<script src="/javascripts/home.js"></script>
+
 	</head>
 <body>
 	<header>
