--- a/public/stylesheets/javascript_page.css
+++ b/public/stylesheets/javascript_page.css
@@ -10,7 +10,7 @@ button:hover{
 }
 
 #hide{
-	font-family: San-sarif;
+	font-family: Sans-sarif;
 	font-size: 16px;
 	font-weight: 700px;
 	font-weight: bold;
