--- a/views/home.erb
+++ b/views/home.erb
@@ -1,6 +1,3 @@
-<head>
-</head>
-
 <body id= 'home_body'>
 	<h1 id= 'home_h1'>
 		Whats up you guys? 
@@ -19,6 +16,6 @@
 
 	<li id='home_li_3', style='display: none'>
 	  Click the button!
-		<a id='random_page'> Random Page </a>
+		<a id='link_to_hi', href = '/hi'>Click Here! </a>
 	</li>
 </body>
